# crud-app

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  rocket.toml
migrations/2025-10-05-171251-0000_create_members/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
