[package]
name = "user-management-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
diesel = { version = "2.3.2", features = ["sqlite", "r2d2", "postgres"] }
diesel_migrations = "2.3.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
default-features = true
features = ["diesel_sqlite_pool"]